plugins {
    id "java"

    /*
    Instrumentation agent extension mechanism expects a single jar containing everything required
    for your extension. This also includes any external libraries that your extension uses and
    cannot access from application classpath (see comment below about `javax.servlet-api` dependency).

    Thus we use Shadow Gradle plugin to package our classes and all required runtime dependencies
    into a single jar.
    See https://imperceptiblethoughts.com/shadow/ for more details about Shadow plugin.
     */
    id "com.github.johnrengelman.shadow" version "7.1.2"
    id "com.diffplug.spotless" version "6.3.0"

    id "io.opentelemetry.instrumentation.muzzle-generation" version "1.17.0-alpha"
    id "io.opentelemetry.instrumentation.muzzle-check" version "1.17.0-alpha"
}

group 'io.dmarkwat.finagle.otel'
version '1.0'

ext {
    versions = [
            // these lines are managed by .github/scripts/update-sdk-version.sh
            opentelemetry              : "1.17.0",
            opentelemetryAlpha         : "1.17.0-alpha",

            // these lines are managed by .github/scripts/update-version.sh
            opentelemetryJavaagent     : "1.17.0",
            opentelemetryJavaagentAlpha: "1.17.0-alpha",
    ]

    deps = [
            autoservice: dependencies.create(group: 'com.google.auto.service', name: 'auto-service', version: '1.0.1')
    ]
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = "sonatype"
        url = uri("https://oss.sonatype.org/content/repositories/snapshots")
    }
}

configurations {
    /*
    We create a separate gradle configuration to grab a published Otel instrumentation agent.
    We don't need the agent during development of this extension module.
    This agent is used only during integration test.
    */
    otel
}

spotless {
    java {
//        googleJavaFormat()
//        licenseHeaderFile(rootProject.file("../../buildscripts/spotless.license.java"), "(package|import|public)")
        target("src/**/*.java")
    }
}

dependencies {
    /*
    Interfaces and SPIs that we implement. We use `compileOnly` dependency because during
    runtime all necessary classes are provided by javaagent itself.
     */
    compileOnly("io.opentelemetry:opentelemetry-sdk-extension-autoconfigure-spi:${versions.opentelemetry}")
    compileOnly("io.opentelemetry.instrumentation:opentelemetry-instrumentation-api:${versions.opentelemetryJavaagentAlpha}")
    compileOnly("io.opentelemetry.javaagent:opentelemetry-javaagent-extension-api:${versions.opentelemetryJavaagentAlpha}")

    /*
     NB! Only Advice (and "helper") classes of instrumentation modules can access classes from application classpath.
     See https://github.com/open-telemetry/opentelemetry-java-instrumentation/blob/main/docs/contributing/writing-instrumentation-module.md#advice-classes
     */
    compileOnly("com.twitter:util-core_2.13:22.7.0")
    compileOnly("com.twitter:finagle-core_2.13:22.7.0")
    compileOnly("core:core_2.13:0.1.0-SNAPSHOT")

    //Provides @AutoService annotation that makes registration of our SPI implementations much easier
    compileOnly deps.autoservice
    annotationProcessor deps.autoservice

    //TODO remove when start using io.opentelemetry.instrumentation.javaagent-instrumentation plugin
    add("codegen", "io.opentelemetry.javaagent:opentelemetry-javaagent-tooling:${versions.opentelemetryJavaagentAlpha}")
    add("codegen", "ch.qos.logback:logback-classic:1.2.3")
    add("muzzleBootstrap", "io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations-support:${versions.opentelemetryJavaagentAlpha}")
    add("muzzleTooling", "io.opentelemetry.javaagent:opentelemetry-javaagent-extension-api:${versions.opentelemetryJavaagentAlpha}")
    add("muzzleTooling", "io.opentelemetry.javaagent:opentelemetry-javaagent-tooling:${versions.opentelemetryJavaagentAlpha}")

    //Otel Java instrumentation that we use and extend during integration tests
    otel("io.opentelemetry.javaagent:opentelemetry-javaagent:${versions.opentelemetryJavaagent}")

    //All dependencies below are only for tests
    testImplementation("org.testcontainers:testcontainers:1.16.2")
    testImplementation("com.fasterxml.jackson.core:jackson-databind:2.11.2")
    testImplementation("com.google.protobuf:protobuf-java-util:3.12.4")
    testImplementation("com.squareup.okhttp3:okhttp:3.12.12")
    testImplementation("io.opentelemetry:opentelemetry-api:${versions.opentelemetry}")
    testImplementation("io.opentelemetry.proto:opentelemetry-proto:0.16.0-alpha")

    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
    testRuntimeOnly("ch.qos.logback:logback-classic:1.2.3")
}

//Produces a copy of upstream javaagent with this extension jar included inside it
//The location of extension directory inside agent jar is hard-coded in the agent source code
task extendedAgent(type: Jar) {
    dependsOn(configurations.otel)
    archiveFileName = "opentelemetry-javaagent.jar"
    from zipTree(configurations.otel.singleFile)
    from(tasks.shadowJar.archiveFile) {
        into "extensions"
    }

    //Preserve MANIFEST.MF file from the upstream javaagent
    doFirst {
        manifest.from(
                zipTree(configurations.otel.singleFile).matching {
                    include 'META-INF/MANIFEST.MF'
                }.singleFile
        )
    }
}

tasks {
    test {
        useJUnitPlatform()

        inputs.files(layout.files(tasks.shadowJar))
        inputs.files(layout.files(tasks.extendedAgent))

        systemProperty 'io.opentelemetry.smoketest.agentPath', configurations.otel.singleFile.absolutePath
        systemProperty 'io.opentelemetry.smoketest.extendedAgentPath', tasks.extendedAgent.archiveFile.get().asFile.absolutePath
        systemProperty 'io.opentelemetry.smoketest.extensionPath', tasks.shadowJar.archiveFile.get().asFile.absolutePath
    }

    compileJava {
        options.release.set(11)
    }

    assemble.dependsOn(shadowJar)
}

muzzle {
    pass {
        group.set("javax.servlet")
        module.set("javax.servlet-api")
        versions.set("[3.0,)")
        assertInverse.set(true)
    }
    pass {
        group.set("javax.servlet")
        module.set("servlet-api")
        versions.set("[2.2, 3.0)")
        assertInverse.set(true)
    }
}
